--- a/English.lproj/AddLabelSheet.xib
+++ b/English.lproj/AddLabelSheet.xib
@@ -21,7 +21,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="61"/>
+			<integer value="63"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -356,7 +356,7 @@
 											<object class="NSTextField" id="860091107">
 												<reference key="NSNextResponder" ref="672441519"/>
 												<int key="NSvFlags">266</int>
-												<string key="NSFrame">{{162, 85}, {492, 22}}</string>
+												<string key="NSFrame">{{162, 85}, {402, 22}}</string>
 												<reference key="NSSuperview" ref="672441519"/>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="791992884">
@@ -562,6 +562,28 @@
 												<reference key="NSHScroller" ref="783233803"/>
 												<reference key="NSContentView" ref="73281197"/>
 											</object>
+											<object class="NSButton" id="575455082">
+												<reference key="NSNextResponder" ref="672441519"/>
+												<int key="NSvFlags">265</int>
+												<string key="NSFrame">{{592, 86}, {64, 18}}</string>
+												<reference key="NSSuperview" ref="672441519"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSButtonCell" key="NSCell" id="44360960">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">0</int>
+													<string key="NSContents">Force:</string>
+													<reference key="NSSupport" ref="1030688209"/>
+													<reference key="NSControlView" ref="575455082"/>
+													<int key="NSButtonFlags">1210864127</int>
+													<int key="NSButtonFlags2">2</int>
+													<reference key="NSNormalImage" ref="36002264"/>
+													<reference key="NSAlternateImage" ref="210939332"/>
+													<string key="NSAlternateContents"/>
+													<string key="NSKeyEquivalent"/>
+													<int key="NSPeriodicDelay">200</int>
+													<int key="NSPeriodicInterval">25</int>
+												</object>
+											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {671, 152}}</string>
 									</object>
@@ -572,7 +594,7 @@
 								<object class="NSTabViewItem" id="859416390">
 									<string key="NSIdentifier">bookmark</string>
 									<object class="NSView" key="NSView" id="199314985">
-										<nil key="NSNextResponder"/>
+										<reference key="NSNextResponder" ref="446082340"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -642,8 +664,31 @@
 													<reference key="NSTextColor" ref="1064412709"/>
 												</object>
 											</object>
+											<object class="NSButton" id="641803721">
+												<reference key="NSNextResponder" ref="199314985"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{115, 54}, {64, 18}}</string>
+												<reference key="NSSuperview" ref="199314985"/>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSButtonCell" key="NSCell" id="1043287026">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">0</int>
+													<string key="NSContents">Force:</string>
+													<reference key="NSSupport" ref="1030688209"/>
+													<reference key="NSControlView" ref="641803721"/>
+													<int key="NSButtonFlags">1210864127</int>
+													<int key="NSButtonFlags2">2</int>
+													<reference key="NSNormalImage" ref="36002264"/>
+													<reference key="NSAlternateImage" ref="210939332"/>
+													<string key="NSAlternateContents"/>
+													<string key="NSKeyEquivalent"/>
+													<int key="NSPeriodicDelay">200</int>
+													<int key="NSPeriodicInterval">25</int>
+												</object>
+											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {671, 152}}</string>
+										<reference key="NSSuperview" ref="446082340"/>
 									</object>
 									<string key="NSLabel">Bookmark</string>
 									<reference key="NSColor" ref="642571392"/>
@@ -652,7 +697,7 @@
 								<object class="NSTabViewItem" id="293664724">
 									<string key="NSIdentifier">branch</string>
 									<object class="NSView" key="NSView" id="402136040">
-										<reference key="NSNextResponder" ref="446082340"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -713,21 +758,20 @@
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {671, 152}}</string>
-										<reference key="NSSuperview" ref="446082340"/>
 									</object>
 									<string key="NSLabel">Branch</string>
 									<reference key="NSColor" ref="642571392"/>
 									<reference key="NSTabView" ref="446082340"/>
 								</object>
 							</object>
-							<reference key="NSSelectedTabViewItem" ref="293664724"/>
+							<reference key="NSSelectedTabViewItem" ref="859416390"/>
 							<reference key="NSFont" ref="1030688209"/>
 							<int key="NSTvFlags">0</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<reference ref="402136040"/>
+								<reference ref="199314985"/>
 							</object>
 						</object>
 						<object class="NSTextField" id="376583827">
@@ -1288,6 +1332,54 @@
 					</object>
 					<int key="connectionID">248</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">didChangeFieldContents:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="575455082"/>
+					</object>
+					<int key="connectionID">251</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: forceValue</string>
+						<reference key="source" ref="575455082"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="575455082"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: forceValue</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">forceValue</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">252</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">didChangeFieldContents:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="641803721"/>
+					</object>
+					<int key="connectionID">255</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: forceValue</string>
+						<reference key="source" ref="641803721"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="641803721"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: forceValue</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">forceValue</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">256</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1457,6 +1549,7 @@
 							<reference ref="466321574"/>
 							<reference ref="852922119"/>
 							<reference ref="501936272"/>
+							<reference ref="575455082"/>
 						</object>
 						<reference key="parent" ref="632340442"/>
 					</object>
@@ -1498,6 +1591,7 @@
 							<reference ref="771438095"/>
 							<reference ref="66761842"/>
 							<reference ref="418665501"/>
+							<reference ref="641803721"/>
 						</object>
 						<reference key="parent" ref="859416390"/>
 					</object>
@@ -1876,6 +1970,34 @@
 						<reference key="object" ref="345974043"/>
 						<reference key="parent" ref="158642104"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">249</int>
+						<reference key="object" ref="575455082"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="44360960"/>
+						</object>
+						<reference key="parent" ref="672441519"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">250</int>
+						<reference key="object" ref="44360960"/>
+						<reference key="parent" ref="575455082"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">253</int>
+						<reference key="object" ref="641803721"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="1043287026"/>
+						</object>
+						<reference key="parent" ref="199314985"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">254</int>
+						<reference key="object" ref="1043287026"/>
+						<reference key="parent" ref="641803721"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1933,6 +2055,12 @@
 					<string>243.IBAttributePlaceholdersKey</string>
 					<string>243.IBPluginDependency</string>
 					<string>244.IBPluginDependency</string>
+					<string>249.IBAttributePlaceholdersKey</string>
+					<string>249.IBPluginDependency</string>
+					<string>250.IBPluginDependency</string>
+					<string>253.IBAttributePlaceholdersKey</string>
+					<string>253.IBPluginDependency</string>
+					<string>254.IBPluginDependency</string>
 					<string>26.IBPluginDependency</string>
 					<string>27.IBPluginDependency</string>
 					<string>3.IBEditorWindowLastContentRect</string>
@@ -2070,6 +2198,26 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<object class="NSMutableDictionary">
+						<string key="NS.key.0">ToolTip</string>
+						<object class="IBToolTipAttribute" key="NS.object.0">
+							<string key="name">ToolTip</string>
+							<reference key="object" ref="575455082"/>
+							<string key="toolTip">Set branch name even if it shadows an existing branch</string>
+						</object>
+					</object>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<object class="NSMutableDictionary">
+						<string key="NS.key.0">ToolTip</string>
+						<object class="IBToolTipAttribute" key="NS.object.0">
+							<string key="name">ToolTip</string>
+							<reference key="object" ref="641803721"/>
+							<string key="toolTip">Set branch name even if it shadows an existing branch</string>
+						</object>
+					</object>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{178, 705}, {717, 451}}</string>
@@ -2147,7 +2295,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">248</int>
+			<int key="maxID">256</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2594,6 +2742,41 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">Foundation.framework/Headers/NSURLDownload.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CALayer.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CIImageProvider.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">Sparkle.framework/Headers/SUAppcast.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">Sparkle.framework/Headers/SUUpdater.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
