--- a/English.lproj/About.xib
+++ b/English.lproj/About.xib
@@ -121,7 +121,7 @@ CkNvcHlyaWdodCDCqSAyMDEwIEphc29uIEYgSGFycmlzLgpBbGwgcmlnaHRzIHJlc2VydmVkLg</stri
 													<reference key="NSSuperview" ref="697773252"/>
 													<bool key="NSEnabled">YES</bool>
 													<object class="NSTextFieldCell" key="NSCell" id="328835627">
-														<int key="NSCellFlags">68288064</int>
+														<int key="NSCellFlags">70385217</int>
 														<int key="NSCellFlags2">138413056</int>
 														<string key="NSContents">Label</string>
 														<object class="NSFont" key="NSSupport">
@@ -337,22 +337,6 @@ CkNvcHlyaWdodCDCqSAyMDEwIEphc29uIEYgSGFycmlzLgpBbGwgcmlnaHRzIHJlc2VydmVkLg</stri
 					<int key="connectionID">62</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: shortVersionString</string>
-						<reference key="source" ref="340629796"/>
-						<reference key="destination" ref="1001"/>
-						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="340629796"/>
-							<reference key="NSDestination" ref="1001"/>
-							<string key="NSLabel">value: shortVersionString</string>
-							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">shortVersionString</string>
-							<int key="NSNibBindingConnectorVersion">2</int>
-						</object>
-					</object>
-					<int key="connectionID">83</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">policyDelegate</string>
 						<reference key="source" ref="352646776"/>
@@ -375,6 +359,22 @@ CkNvcHlyaWdodCDCqSAyMDEwIEphc29uIEYgSGFycmlzLgpBbGwgcmlnaHRzIHJlc2VydmVkLg</stri
 						</object>
 					</object>
 					<int key="connectionID">87</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: fullVersionString</string>
+						<reference key="source" ref="340629796"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="340629796"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: fullVersionString</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">fullVersionString</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">88</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -588,7 +588,7 @@ CkNvcHlyaWdodCDCqSAyMDEwIEphc29uIEYgSGFycmlzLgpBbGwgcmlnaHRzIHJlc2VydmVkLg</stri
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">87</int>
+			<int key="maxID">88</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
